--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack-dev-server",
     "lint": "tsc --noEmit && eslint */**/*.{ts,tsx} --quiet --fix",
     "test": "jest",
-    "build": "npm run lint && npm run test && webpack"
+    "build": "npm run lint && npm run test && webpack --env.production=true"
   },
   "repository": {
     "type": "git",
@@ -31,8 +31,10 @@
     "@types/jest": "^24.9.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.0",
@@ -44,7 +46,12 @@
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "ts-jest": "^24.3.0",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
