--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "webpack-dev-server",
     "lint": "tsc --noEmit && eslint */**/*.{ts,tsx} --quiet --fix",
     "test": "jest",
-    "build": "npm run lint && npm run test && webpack --env.production=true"
+    "build": "npm run lint && npm run test && webpack --env.production=true",
+    "buildForce": "npm run test && webpack --env.production=true"
   },
   "repository": {
     "type": "git",
@@ -46,9 +47,9 @@
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.5",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
@@ -56,7 +57,7 @@
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {},
   "babel": {
