--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "experimentalDecorators": true,
+    "downlevelIteration": true,
     "target": "es5",
     "lib": [
       "es2017",
