--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "tsc --noEmit && eslint */**/*.{ts,tsx} --quiet --fix",
     "test": "jest",
     "build": "npm run lint && npm run test && webpack --env.production=true",
+    "buildVersion": "npm run lint && npm run test && webpack --env.production=true --env.version=true",
     "buildForce": "npm run test && webpack --env.production=true"
   },
   "repository": {
