--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "svg-inline-loader": "^0.8.2",
     "ts-jest": "^24.3.0",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
