--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "noUnusedLocals": true,
     "experimentalDecorators": true,
     "downlevelIteration": true,
+    "declaration": true,
+    "outDir": "build",
     "lib": [
       "es2017",
       "dom"
